--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -53,7 +53,7 @@ ul#nav__menu--links-mobile {
     top: 61px;
     left: 18px;
     width: calc(100% - 35px);
-    height: calc(100% - 108px);
+    height: calc(100% - 100px);
     padding: 24px 0;
     display: flex;
     flex-direction: column;
@@ -70,7 +70,6 @@ ul#nav__menu--links-mobile {
 }
 
 ul#nav__menu--links-mobile li {
-    /* background-color: aqua; */
     padding: 6px;
     text-align: center;
     font-size: 1.2em;
