--- a/react-app/src/utils.css
+++ b/react-app/src/utils.css
@@ -220,6 +220,15 @@ input::placeholder {
     #wide__subcontainer--centered {
         margin-left: 20px;
     }
+
+    input,
+    input,
+    textarea,
+    select,
+    select,
+    input {
+        font-size: 1em;
+    }
 }
 
 @media only screen and (max-width: 672px) {
